--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
   },
   "dependencies": {
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.0",
+    "react-router": "^2.2.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
