--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "css-loader": "^0.24.0",
     "eslint": "^3.4.0",
     "eslint-loader": "^1.5.0",
@@ -36,6 +37,7 @@
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.0.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.0",
