--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": ["react", "es2015", "stage-0"],
-  "plugins": ["transform-runtime", "transform-decorators-legacy"],
+  "plugins": ["transform-decorators-legacy"],
   "env": {
     "dev": {
         "plugins": [["react-transform", {
