--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "set NODE_ENV=dev && webpack-dev-server --progress --colors",
-    "build": "rm -rf ./build && set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --colors"
+    "build": "rm -rf ./build && set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --colors",
+    "mock": "node --harmony ./apps/mock/server.js"
   },
   "author": "熊川宇",
   "license": "ISC",
@@ -14,9 +15,9 @@
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "css-loader": "^0.24.0",
     "eslint": "^3.4.0",
     "eslint-loader": "^1.5.0",
@@ -24,8 +25,9 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
-    "koa": "^1.2.2",
-    "koa-router": "^5.4.0",
+    "koa": "^1.4.0",
+    "koa-body": "^2.3.0",
+    "koa-router": "^5.4.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "open-browser-webpack-plugin": "0.0.2",
@@ -37,12 +39,13 @@
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.0.0",
+    "es6-promise": "^4.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.0",
     "react-router": "^2.2.4",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
